--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-cal": "^4.9.0",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
